Add webpack 4 docs

--- a/apps/app_web/lib/app_web/templates/layout/app.html.eex
+++ b/apps/app_web/lib/app_web/templates/layout/app.html.eex
@@ -9,6 +9,7 @@
 
     <title>Hello App!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="<%= static_path(@conn, "/css/styles.css") %>">
   </head>
 
   <body>
@@ -31,5 +32,6 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/bundle.js") %>"></script>
   </body>
 </html>
